# JellyfishCorner

./: .gitignore  README.md
C#/2DArrays/: 2DArrays.sln
C#/Arrays/: Arrays.sln
C#/Caculator/: Caculator.sln
C#/ClassAndObjectExample/: ClassAndObjectExample.sln
C#/ClassAndObjectExample/ClassAndObjectExample/: Program.cs  Student.cs  Tools.cs
C#/ExceptionHandling/: ExceptionHandling.sln
C#/ForLoop/: ForLoop.sln
C#/GuessingGame/GuessingGame/: Program.cs
C#/HelloWorld/HelloWorld/: Program.cs
C#/IfStatements/IfStatements/: Program.cs
C#/MabLibsGame/: MabLibsGame.sln
C#/MabLibsGame/MabLibsGame/: Program.cs
C#/Methods/: Methods.sln
C#/Methods/Methods/: Program.cs
C#/SwitchExample/: SwitchExample.sln
C#/UserInput/: UserInput.sln
C#/UserInput/UserInput/: Program.cs
DesignPattern/cpp/BuilderPattern/: CMakeLists.txt  README.md
DesignPattern/cpp/Creational/PrototypePattern/: CMakeLists.txt
DesignPattern/cpp/Introduction/: CMakeLists.txt
DesignPattern/python/: README.md
EthicalHacking/: README.md
EthicalHacking/Brute-Force-Attack/: 1-What-is-Brute-Force-Attack.md
EthicalHacking/Intruoduction/: 1-Security-Terminologies.md
EthicalHacking/Linux-basic/: 2-Linux-Directory-Structure.md
EthicalHacking/Port-Scanner/: DirectoryDiscovery.py
Language/Go/: happynewyear.go
OpenGL/OpenGLHelloWorld/: CMakeLists.txt  README.md
Python/TkinterTutorial/: main.py
Self-Driving-Car/DL-Introduction/: 01_cnn.py
Self-Driving-Car/OpenCV-Camera/: README.md
Topic/Self-Driving-Car/: README.md  utils.py
WebDeveloperTraining/: README.md
(+155 files in other folders)
